Updated styles, added ScrollTop component, and modified various components

--- a/public/index.html
+++ b/public/index.html
@@ -2,43 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Primary Meta Tags -->
+    <title>Way to IT - Innovating the Future with Technology</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Way to IT provides cutting-edge IT solutions, web development, mobile apps, and innovative technology services to help businesses succeed."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="IT solutions, web development, mobile apps, technology services, software development, digital transformation, Way to IT"
+    />
+    <meta name="author" content="Way to IT" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Way to IT - Innovating the Future with Technology" />
+    <meta
+      property="og:description"
+      content="Explore premium IT solutions, including web development, mobile apps, and software development tailored to your business needs."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/Logo.png" />
+    <meta property="og:url" content="https://waytoit.in/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Way to IT - Innovating the Future with Technology" />
+    <meta
+      name="twitter:description"
+      content="Providing cutting-edge IT solutions, web development, and technology services for businesses worldwide."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/Logo.png" />
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://waytoit.in/" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- External Script -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <!-- Schema.org Markup for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Way to IT",
+        "url": "https://waytoit.in/",
+        "logo": "%PUBLIC_URL%/Logo.png",
+        "description": "Way to IT provides innovative IT solutions, web development, mobile apps, and digital transformation services.",
+        "sameAs": [
+          "https://www.facebook.com/waytoit",
+          "https://www.linkedin.com/company/waytoit",
+          "https://twitter.com/waytoit"
+        ]
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
